MB-49820: Ensure we always decode keys using namespace

We should always decode document ids by first decoding their namespace,
if --no-namespace is not specified. Currently we only do this if the
document id is >= size of uint32_t.

Change-Id: Ia51f194d526e19c7d79f71857ef56ecf619d18f9
Reviewed-on: https://review.couchbase.org/c/couchstore/+/167671
Tested-by: Richard de Mellow <richard.demellow@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>